# Credit-Risk-Finance-Manager-c--

./: .gitignore  Initiate_Backend.sh  Initiate_Cpp.sh  README.md  Tutorial.md
HelloWorld/: CMakeLists.txt
project-1/: main.cpp  run.sh
